--- a/Views/Branches/Create.cshtml
+++ b/Views/Branches/Create.cshtml
@@ -4,9 +4,9 @@
     ViewBag.Title = "Create";
     Layout = "~/Views/Shared/_MainLayout.cshtml";
 }
-
+<section>
 <div class="alert alert-primary">
-    <h2>Create Branch</h2>
+    <h2><a href="~/Branches" class="pull-left"><i class="fas fa-arrow-alt-circle-left fa-lg"></i></a>Create Branch</h2>
 </div>
 
 @using (Html.BeginForm()) 
@@ -18,7 +18,7 @@
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="row">
                 <div class="col-sm-12">
-                    @Html.EditorFor(model => model.BranchName, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.BranchName, new { htmlAttributes = new { @class = "form-control", placeholder="Branch Name" } })
                     @Html.ValidationMessageFor(model => model.BranchName, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -27,7 +27,7 @@
         <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
             <div class="row">
                 <div class="col-sm-12">
-                    @Html.EditorFor(model => model.PhoneNumber, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.PhoneNumber, new { htmlAttributes = new { @class = "form-control", placeholder="Phone Number" } })
                     @Html.ValidationMessageFor(model => model.PhoneNumber, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -36,7 +36,7 @@
         <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
             <div class="row">
                 <div class="col-sm-12">
-                    @Html.EditorFor(model => model.Address, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.Address, new { htmlAttributes = new { @class = "form-control", placeholder="Address" } })
                     @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -48,10 +48,11 @@
     </div>
 }
 
-<div class="row">
+			@*<div class="row">
                 <div class="col-md-2">
                     <a href=@Url.Action("Index") class="btn btn-default btn-block">
                         <span class="glyphicon glyphicon-arrow-left"></span> Back to Branches List
                     </a>
                 </div>
-            </div>
+            </div>*@
+</section>
