--- a/Views/Cart/Edit.cshtml
+++ b/Views/Cart/Edit.cshtml
@@ -4,9 +4,9 @@
     ViewBag.Title = "Edit";
     Layout = "~/Views/Shared/_MainLayout.cshtml";
 }
-
+<section>
 <div class="alert alert-primary">
-    <h2>Edit Order</h2>
+    <h2><a href="~/Cart/MyCart" class="pull-left"><i class="fas fa-arrow-alt-circle-left fa-lg"></i></a>Edit Order</h2>
 </div>
 
 @using (Html.BeginForm())
@@ -18,53 +18,60 @@
     @Html.HiddenFor(model => model.Id)
 
     <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
-        <div class="row">
-            <div class="col-md-4 col-md-offset-4">
-                <img src="~/Uploads/@Html.Display("ItemImage")"
-                    class="thumbnail"
-                    style="margin:auto" />
-            </div>
-        </div>
-    </div>
+                    
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <img src="~/Uploads/@Html.Display("ItemImage")"
+                                class="img-fluid" style="margin:auto" />
+                        </div>
+                    </div>
+                </div>
     <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
-        <div class="row">
-            <div class="col-sm-12">
-                @Html.DropDownList("BranchId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.BranchId, "", new { @class = "text-danger" })
-            </div>
-        </div>
-    </div>
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <label>Branch</label>
+                        </div>
+                        <div class="col-sm-8">
+                            @Html.DropDownList("BranchId", null, htmlAttributes: new { @class = "form-control" })
+                            @Html.ValidationMessage("ItemBranch", "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                </div>
+     <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <label>Quantity</label>
+                        </div>
+                        <div class="col-sm-8">
+                            <input type="number" name="Quantity" id="myQuantity" value="1" min="1" class="form-control" />
+                            @Html.ValidationMessage("Quantity", "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                </div>
     <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
-        <div class="row">
-            @Html.Label("Quantity", htmlAttributes: new { @class = "control-label col-md-2 col-md-offset-2" })
-            <div class="col-sm-12">
-                <input type="number" name="Quantity" id="myQuantity" value=@Model.Quantity min="1" class="form-control" />
-                @Html.ValidationMessage("Quantity", "", new { @class = "text-danger" })
-            </div>
-        </div>
-    </div>
-    <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
-        <div class="row">
-            @Html.Label("Price", htmlAttributes: new { @class = "control-label col-md-2 col-md-offset-2" })
-            <div class="col-sm-12">
-                <p id="myP" style="font-weight:bolder;font-size:larger;text-align:left">@ViewBag.OrderPrice</p>
-            </div>
-        </div>
-    </div>  
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <label>Price</label>
+                        </div>
+                        <div class="col-sm-8">
+                            <p id="myP" style="font-weight:bolder;font-size:larger;text-align:left">@ViewBag.ItemPrice</p>
+                        </div>
+                    </div>
+                </div>
     <div class="row d-flex justify-content-between">
         <input type="submit" value="Save" class="btn btn-primary col-9 mx-auto" />
     </div>
 </div>
 }
 
-<div class="row">
+@*<div class="row">
             <div class="col-md-2">
                 <a href="~/Cart/MyCart" class="btn btn-default btn-block">
                     <span class="glyphicon glyphicon-arrow-left"></span> Back to Cart
                 </a>
-            </div></div>
+            </div></div>*@
 
-
+</section>
 @section scripts{
     <script>
         $(function () {
