--- a/Views/Categories/Create.cshtml
+++ b/Views/Categories/Create.cshtml
@@ -4,9 +4,9 @@
     ViewBag.Title = "Create";
     Layout = "~/Views/Shared/_MainLayout.cshtml";
 }
-
+<section>
 <div class="alert alert-primary">
-    <h2>Create Category</h2>
+    <h2><a href="~/Categories" class="pull-left"><i class="fas fa-arrow-alt-circle-left fa-lg"></i></a>Create Category</h2>
 </div>
 
 @using (Html.BeginForm()) 
@@ -18,7 +18,7 @@
         <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
             <div class="row">
                 <div class="col-sm-12">
-                    @Html.EditorFor(model => model.CategoryName, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.CategoryName, new { htmlAttributes = new { @class = "form-control", placeholder="Category Name" } })
                     @Html.ValidationMessageFor(model => model.CategoryName, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -29,11 +29,12 @@
         </div>
     </div>
 }
-<div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+@*<div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
     <div class="row">
     <div class="col-md-2">
         <a href="~/Categories" class="btn btn-default btn-block">
             <span class="glyphicon glyphicon-arrow-left"></span> Back to Categories List
         </a>
     </div>
-</div>
+</div>*@
+</section>
