--- a/Views/Categories/Edit.cshtml
+++ b/Views/Categories/Edit.cshtml
@@ -5,9 +5,9 @@
     Layout = "~/Views/Shared/_MainLayout.cshtml";
 }
 
-
+<section>
 <div class="alert alert-primary">
-    <h2>Edit Category</h2>
+    <h2><a href="~/Categories" class="pull-left"><i class="fas fa-arrow-alt-circle-left fa-lg"></i></a>Edit Category</h2>
 </div>
 
 @using (Html.BeginForm())
@@ -21,7 +21,7 @@
     <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
         <div class="row">
             <div class="col-sm-12">
-                @Html.EditorFor(model => model.CategoryName, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.CategoryName, new { htmlAttributes = new { @class = "form-control", placeholder="Category Name"  } })
                 @Html.ValidationMessageFor(model => model.CategoryName, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -33,7 +33,7 @@
 </div>
 }
 
-<div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+@*<div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
     <div class="row">
         <div class="col-md-2">
             <a href="~/Categories" class="btn btn-default btn-block">
@@ -41,4 +41,5 @@
             </a>
         </div>
     </div>
-</div>
+</div>*@
+</section>
