--- a/Views/Insurances/Create.cshtml
+++ b/Views/Insurances/Create.cshtml
@@ -5,9 +5,9 @@
     Layout = "~/Views/Shared/_MainLayout.cshtml";
 }
 
-
+<section>
 <div class="alert alert-primary">
-    <h2>Create Insurance</h2>
+    <h2><a href="~/Insurances" class="pull-left"><i class="fas fa-arrow-alt-circle-left fa-lg"></i></a>Create Insurance</h2>
 </div>
 
 @using (Html.BeginForm()) 
@@ -19,7 +19,7 @@
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="row">
                 <div class="col-sm-12">
-                    @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control", placeholder="Insurance Description" } })
                     @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -27,7 +27,7 @@
         <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
             <div class="row">
                 <div class="col-sm-12">
-                    @Html.EditorFor(model => model.Discount, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.Discount, new { htmlAttributes = new { @class = "form-control", placeholder="Discount" } })
                     @Html.ValidationMessageFor(model => model.Discount, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -38,7 +38,7 @@
     </div>
 }
 
-<div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+@*<div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
             <div class="row">
                 <div class="col-md-2">
                     <a href=@Url.Action("Index") class="btn btn-default btn-block">
@@ -51,4 +51,5 @@
                     </button>
                 </div>
             </div>
-        </div>
+        </div>*@
+		</section>
