--- a/Views/Insurances/Index.cshtml
+++ b/Views/Insurances/Index.cshtml
@@ -12,7 +12,7 @@
     <div class="row">
         <div class="col-md-offset-5 col-md-2">
             <div class="row">
-                <a class="btn btn-default btn-block" href="Insurances/Create">
+                <a class="btn btn-default btn-block" href="~/Insurances/Create">
                     <i class="fas fa-plus-circle"></i> Create New Insurance
                 </a>
             </div>
