create & edit pages done with other changes

--- a/Views/Account/ManagerTasksView.cshtml
+++ b/Views/Account/ManagerTasksView.cshtml
@@ -2,9 +2,9 @@
     ViewBag.Title = "ManagerTasksView";
     Layout = "~/Views/Shared/_MainLayout.cshtml";
 }
-
+<section>
 <div class="alert alert-primary">
-    <h2>Manager Tasks List</h2>
+    <h2><a href="~/Home/Index" class="pull-left"><i class="fas fa-home fa-lg"></i></a>Manager Tasks List</h2>
 </div>
 
 <div class="list-group">
@@ -41,3 +41,4 @@
         </div>
     </div>
 </div>
+</section>
