--- a/Views/Home/Contact.cshtml
+++ b/Views/Home/Contact.cshtml
@@ -8,7 +8,7 @@
     
     <div class="alert alert-primary">
         <h2 class="titleX">
-            <a href="~/Home/Index" class="pull-left"><i class="fas fa-arrow-alt-circle-left fa-lg"></i></a>
+            <a href="~/Home/Index" class="pull-left"><i class="fas fa-home fa-lg"></i></a>
             Contact Us</h2>
     </div>  
 	
