--- a/Views/Shared/_MainLayout.cshtml
+++ b/Views/Shared/_MainLayout.cshtml
@@ -150,33 +150,18 @@
             <nav class="pull-left">
                 <ul>
                     <li>
-                        <a href="https://www.creative-tim.com">
-                            Creative Tim
-                        </a>
+                        <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square fa-3x"></i></a>
                     </li>
                     <li>
-                        <a href="http://presentation.creative-tim.com">
-                            About Us
-                        </a>
+                        <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter-square fa-3x"></i></a>
                     </li>
                     <li>
-                        <a href="http://blog.creative-tim.com">
-                            Blog
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.creative-tim.com/license">
-                            Licenses
-                        </a>
+                        <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram fa-3x"></i></a>
                     </li>
                 </ul>
             </nav>
             <div class="copyright pull-right">
-                &copy;
-                <script>
-                    document.write(new Date().getFullYear())
-                </script>, made with <i class="material-icons">favorite</i> by
-                <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a> for a better web.
+               <p> Copyright 2018 · All rights reserved.</p>
             </div>
         </div>
     </footer>
