--- a/Views/Account/EditProfile.cshtml
+++ b/Views/Account/EditProfile.cshtml
@@ -7,7 +7,7 @@
 
 <section>
 <div class="alert alert-primary">
-    <h2><a href="~/Home" class="pull-left"><i class="fas fa-arrow-alt-circle-left fa-lg"></i></a>Edit Profile</h2>
+    <h2><a href="~/Home/Index" class="pull-left"><i class="fas fa-home fa-lg"></i></a>Edit Profile</h2>
 </div>
 
 @if (ViewBag.Result == null || ViewBag.Result == "The Password is incoreect.")
