--- a/Views/Account/EmployeeTasksView.cshtml
+++ b/Views/Account/EmployeeTasksView.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="alert alert-primary">
-    <h2>Employee Tasks View</h2>
+    <h2><a href="~/Home/Index" class="pull-left"><i class="fas fa-home fa-lg"></i></a>Employee Tasks View</h2>
 </div>
 
 <div class="list-group">
