--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -7,7 +7,7 @@
 <section id="about w-100">
     <div class="alert alert-primary">
         <h2 class="titleX">
-            <a href="~/Home/Index" class="pull-left"><i class="fas fa-arrow-alt-circle-left fa-lg"></i></a>
+            <a href="~/Home/Index" class="pull-left"><i class="fas fa-home fa-lg"></i></a>
             About Us</h2>
     </div>
 
