--- a/Views/Quantities/Create.cshtml
+++ b/Views/Quantities/Create.cshtml
@@ -5,12 +5,12 @@
     Layout = "~/Views/Shared/_MainLayout.cshtml";
 }
 
-
+<section>
 <div class="alert alert-primary">
-    <h2>Add Quantity</h2>
+    <h2><a href="~/Quantities" class="pull-left"><i class="fas fa-arrow-alt-circle-left fa-lg"></i></a>Add Quantity</h2>
 </div>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Create", "Quantities", FormMethod.Post, new { id="MyForm" }))
 {
     @Html.AntiForgeryToken()
 
@@ -22,46 +22,43 @@
                     <h3>@ViewBag.Result</h3>
                 }
             }
-            <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         </div>
 
         <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
             <div class="row">
-                @Html.Label("Item Model Number", htmlAttributes: new { @class = "control-label col-md-2 col-md-offset-2" })
                 <div class="col-sm-12">
-                    @Html.Editor("ItemModelNumber", new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.Editor("ItemModelNumber", new { htmlAttributes = new { @class = "form-control", placeholder="Item Model Number" } })
                     @Html.ValidationMessageFor(model => model.ItemId, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
 
         <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
-            <div class="row">
-                @Html.Label("Branch Name", htmlAttributes: new { @class = "control-label col-md-2 col-md-offset-2" })
-                <div class="col-sm-12">
-                    @Html.DropDownList("BranchId", null, htmlAttributes: new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.BranchId, "", new { @class = "text-danger" })
+                <div class="row">
+                    <div class="col-sm-12">
+                        @Html.DropDownList("BranchId", null,"Select Branch", htmlAttributes: new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.BranchId, "", new { @class = "text-danger" })
+                    </div>
                 </div>
             </div>
-        </div>
 
         <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
             <div class="row">
                 <div class="col-sm-12">
-                    @Html.EditorFor(model => model.ItemQuantity, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.ItemQuantity, new { htmlAttributes = new { @class = "form-control", placeholder="Quantity",min="1" } })
                     @Html.ValidationMessageFor(model => model.ItemQuantity, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
         
         <div class="row d-flex justify-content-between">
-            <input type="submit" value="Create" class="btn btn-primary col-9 mx-auto" />
+            <input type="submit" value="Add" class="btn btn-primary col-9 mx-auto" />
         </div>
     </div>
 }
 
-<div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+@*<div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
             <div class="row">
                 <div class="col-md-2">
                     <a href="~/Quantities" class="btn btn-default btn-block">
@@ -74,4 +71,16 @@
                     <span class="glyphicon glyphicon-plus-sign"></span> Add
                 </button>
             </div>
-        </div>
+        </div>*@
+</section>
+<script type="text/javascript">
+	var my_func = function(event) {
+		var branchlist=document.getElementById("BranchId");
+		var branch=branchlist.options[branchlist.selectedIndex].text;
+		if(branch=="Select Branch" ){
+		alert("Make sure you select branch!");
+		event.preventDefault();
+	}};
+	var form = document.getElementById("MyForm");
+	form.addEventListener("submit", my_func, true);
+</script>
