--- a/Views/Quantities/Edit.cshtml
+++ b/Views/Quantities/Edit.cshtml
@@ -5,59 +5,53 @@
     Layout = "~/Views/Shared/_MainLayout.cshtml";
 }
 
-
+<section>
 <div class="alert alert-primary">
-    <h2>Edit Quantity</h2>
+    <h2><a href="~/Quantities" class="pull-left"><i class="fas fa-arrow-alt-circle-left fa-lg"></i></a>Edit Quantity</h2>
 </div>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Edit", "Quantities", FormMethod.Post, new { id="MyForm" }))
 {
     @Html.AntiForgeryToken()
     
     <div class="col-md-8 col-lg-6 mx-auto pb-5 d-flex flex-column">                 
         <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
-            <h4></h4>
             @{
                 if (ViewBag.Result != null)
                 {
                     <h3>@ViewBag.Result</h3>
                 }
             }
-            <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         </div>
 
         <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
             <div class="row">
-                @Html.Label("Item Model Number", htmlAttributes: new { @class = "control-label col-md-2 col-md-offset-2" })
                 <div class="col-sm-12">
                     @{
                         ApplicationDbContext db = new ApplicationDbContext();
                         var ModelNumber = db.Items.Find(Model.ItemId).ModelNumber;
                         
-                        <input type="text" name="ItemModelNumber" value="@ModelNumber" class = "form-control"/>
+                        <input type="text" name="ItemModelNumber" value="@ModelNumber" placeholder="Item Model Number" class = "form-control"/>
                     }
-                    
-                    
                     @Html.ValidationMessageFor(model => model.ItemId, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
 
         <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
-            <div class="row">
-                @Html.Label("Branch Name", htmlAttributes: new { @class = "control-label col-md-2 col-md-offset-2" })
-                <div class="col-sm-12">
-                    @Html.DropDownList("BranchId", null, htmlAttributes: new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.BranchId, "", new { @class = "text-danger" })
+                <div class="row">
+                    <div class="col-sm-12">
+                        @Html.DropDownList("BranchId", null,"Select Branch", htmlAttributes: new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.BranchId, "", new { @class = "text-danger" })
+                    </div>
                 </div>
             </div>
-        </div>
 
         <div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
             <div class="row">
                 <div class="col-sm-12">
-                    @Html.EditorFor(model => model.ItemQuantity, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.ItemQuantity, new { htmlAttributes = new { @class = "form-control", placeholder="Quantity",min="1" } })
                     @Html.ValidationMessageFor(model => model.ItemQuantity, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -69,7 +63,7 @@
     </div>
 }
 
-<div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
+@*<div class="col-sm-12 col-md-10 mx-auto  my-3 py-1">
             <div class="row">
                 <div class="col-md-2">
                     <a href="~/Quantities" class="btn btn-default btn-block">
@@ -82,4 +76,16 @@
                     <span class="glyphicon glyphicon-floppy-disk"></span> Save
                 </button>
             </div>
-        </div>
+        </div>*@
+</section>
+<script type="text/javascript">
+	var my_func = function(event) {
+		var branchlist=document.getElementById("BranchId");
+		var branch=branchlist.options[branchlist.selectedIndex].text;
+		if(branch=="Select Branch" ){
+		alert("Make sure you select branch!");
+		event.preventDefault();
+	}};
+	var form = document.getElementById("MyForm");
+	form.addEventListener("submit", my_func, true);
+</script>
