edit Manager & Employee tasls view

--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -20,12 +20,12 @@
                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                             <div class="card-body">
                                 <span class="bmd-form-group"><div class="input-group">
-                                    <span class="input-group-addon pt-2 pr-2"><i class="material-icons">face</i></span>                                    
+                                    <span class="input-group-addon pt-2 pr-2"></span>                                    
                                     @Html.TextBoxFor(m => m.UserName, new { placeholder = "User name", @class = "form-control" })
                                     @Html.ValidationMessageFor(m => m.UserName, "", new { @class = "text-danger" })
                                 </div></span>
                                 <span class="bmd-form-group"><div class="input-group">
-                                    <span class="input-group-addon pt-2 pr-2"><i class="material-icons">email</i></span>
+                                    <span class="input-group-addon pt-2 pr-2"></span>
                                     @Html.PasswordFor(m => m.Password, new { placeholder = "Password", @class = "form-control" })
                                     @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
                                 </div></span>
