--- a/Views/Account/EmployeeTasksView.cshtml
+++ b/Views/Account/EmployeeTasksView.cshtml
@@ -2,39 +2,44 @@
     ViewBag.Title = "EmployeeTasksView";
     Layout = "~/Views/Shared/_MainLayout.cshtml";
 }
-
+<section>
 <div class="alert alert-primary">
-    <h2><a href="~/Home/Index" class="pull-left"><i class="fas fa-home fa-lg"></i></a>Employee Tasks View</h2>
+    <h2><a href="~/Home/Index" class="pull-left"><i class="fas fa-home fa-lg"></i></a>Employee Tasks</h2>
 </div>
 
 <div class="list-group">
     <div class="row">
-        <div class="col-md-offset-2 col-md-4">
-            @Html.ActionLink("Go To Users", "Index", "ApplicationUsers", null, new { @class = "list-group-item" })
+		<div class="col-md-2"></div>
+        <div class="col-md-4">
+			<h3><a href="~/ApplicationUsers"><i class="fas fa-users"></i> Users</a></h3>
         </div>
-        <div class="col-sm-12">
-            @Html.ActionLink("Go To Items", "Index", "Items", null, new { @class = "list-group-item" })
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-offset-2 col-md-4">
-            @Html.ActionLink("Go To Invoices", "Index", "Invoices", null, new { @class = "list-group-item" })
-        </div>
-        <div class="col-sm-12">
-            @Html.ActionLink("Go To Branches", "Index", "Branches", null, new { @class = "list-group-item" })
+        <div class="col-md-4">
+			<h3><a href="~/Items"><i class="fas fa-barcode"></i> Items</a></h3>
         </div>
     </div>
     <div class="row">
-        <div class="col-md-offset-2 col-md-4">
-            @Html.ActionLink("Go To Quantities", "Index", "Quantities", null, new { @class = "list-group-item" })
+		<div class="col-md-2"></div>
+        <div class="col-md-4">
+			<h3><a href="~/Invoices"><i class="fas fa-file-alt"></i> Invoices</a></h3>
         </div>
-        <div class="col-sm-12">
-            @Html.ActionLink("Go To Orders", "Index", "Orders", null, new { @class = "list-group-item" })
+        <div class="col-md-4">
+			<h3><a href="~/Orders"><i class="fas fa-file-alt"></i> Orders</a></h3>
         </div>
     </div>
     <div class="row">
-        <div class="col-md-offset-4 col-md-4">
-            @Html.ActionLink("Go To Insurances", "Index", "Insurances", null, new { @class = "list-group-item" })
+		<div class="col-md-2"></div>
+        <div class=" col-md-4">
+			<h3><a href="~/Branches"><i class="fab fa-periscope"></i> Branches</a></h3>
+        </div>
+        <div class="col-md-4">
+			<h3><a href="~/Insurances"><i class="fas fa-credit-card"></i> Insurances</a></h3>
+        </div>
+    </div>
+    <div class="row">
+		<div class="col-md-4"></div>
+        <div class="col-md-4">
+			<h3><a href="~/Quantities"><i class="fab fa-quora"></i> Quantities</a></h3>
         </div>
     </div>
 </div>
+</section>
