--- a/Views/Branches/Index.cshtml
+++ b/Views/Branches/Index.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div class="alert alert-primary">
-    <h2>Branches</h2>
+    <h2><a href="~/Home/Index" class="pull-left"><i class="fas fa-home fa-lg"></i></a>Branches</h2>
 </div>
 
 @using (Html.BeginForm("Search", "Branches", FormMethod.Post))
