--- a/Views/Items/Details.cshtml
+++ b/Views/Items/Details.cshtml
@@ -6,7 +6,7 @@
 }
 <div class="alert alert-primary">
     <h3 class="titleX">
-        <a href="~/Home/Index" class="pull-left"><i class="fas fa-arrow-alt-circle-left fa-lg"></i></a>
+        <a href="~/Home/Index" class="pull-left"><i class="fas fa-home fa-lg"></i></a>
         @Html.DisplayFor(model => model.ItemType.CategoryName)
         <span class="text-center pl-3"><i class="fas fa-indent fa-lg"></i></span>        
     </h3>
