--- a/Views/Cart/MyCart.cshtml
+++ b/Views/Cart/MyCart.cshtml
@@ -7,7 +7,7 @@
 }
 
 <div class="alert alert-primary">
-    <h2>My Cart</h2>    
+    <h2><a href="~/Home/Index" class="pull-left"><i class="fas fa-home fa-lg"></i></a>My Cart</h2>    
 </div>
 
 @if (Model != null && Model.Count() > 0)
