--- a/Views/Orders/Index.cshtml
+++ b/Views/Orders/Index.cshtml
@@ -128,7 +128,7 @@
                     @if (User.IsInRole("Employees"))
                     {
                         <a title="Edit" href=@Url.Action("Edit", new { id = item.Id })>
-                            <span class="glyphicon glyphicon glyphicon-edit" style="font-size:large"></span>
+                            <i class="fas fa-edit fa-lg"></i>
                         </a>
                     }
                     @if (User.IsInRole("Admins"))
