--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -16,31 +16,25 @@
                             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                             <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                             <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+							<li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+							<li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
                         </ol>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img class="d-block w-100" src="~/Images/kit/bg2.jpg" alt="First slide">
-                                <div class="carousel-caption d-none d-md-block">
-                                    <h4>
-                                        <i class="material-icons">location_on</i> Yellowstone National Park, United States
-                                    </h4>
-                                </div>
+                                <img class="d-block w-100" src="~/Images/kit/b2.jpg" alt="First slide">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block w-100" src="~/Images/kit/bg3.jpg" alt="Second slide">
-                                <div class="carousel-caption d-none d-md-block">
-                                    <h4>
-                                        <i class="material-icons">location_on</i> Somewhere Beyond, United States
-                                    </h4>
-                                </div>
+                                <img class="d-block w-100" src="~/Images/kit/b1.jpg" alt="Second slide">
+                                
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block w-100" src="~/Images/kit/bg.jpg" alt="Third slide">
-                                <div class="carousel-caption d-none d-md-block">
-                                    <h4>
-                                        <i class="material-icons">location_on</i> Yellowstone National Park, United States
-                                    </h4>
-                                </div>
+                                <img class="d-block w-100" src="~/Images/kit/b3.jpg" alt="Third slide">
+                            </div>
+							<div class="carousel-item">
+                                <img class="d-block w-100" src="~/Images/kit/b4.jpg" alt="Fourth slide">
+                            </div>
+							<div class="carousel-item">
+                                <img class="d-block w-100" src="~/Images/kit/b5.jpg" alt="Fifth slide">
                             </div>
                         </div>
                         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
